# Recommender_Systems_project

./: README.md  pyproject.toml
docs/: math_appendix.md  theory.md
notebook/: 001_data_and_eda_1m.ipynb
notebooks/: 001_data_and_eda_1m.ipynb  02_knn_like.ipynb  03_01_matrix_factorization_SVD.ipynb  03_02_matrix_factorization_ALS.ipynb  03_02_matrix_factorization_ALS_CLEAN.ipynb  04_01_linear_models_EASE_CLEAN.ipynb  04_02_linear_models_SLIM.ipynb  05_user_segment_evaluation.ipynb  06_ncf_pytorch.ipynb  07_two_tower_hybrid_pytorch.ipynb  08_results_and_conclusions.ipynb
src/recomender/: data_io.py  metrics.py  preprocessing.py  splitters.py
src/recommender/: results_logger.py
