[project]
name = "recommender-systems-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Aliaksandr Borsuk",email = "yabarsukby@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

packages = [
  { include = "recommender", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
